--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "check:formatting:all": "npm run check:formatting \"**/*.{ts,js,md,yml,json}\"",
     "fix:formatting": "npm run check:formatting --write",
     "fix:formatting:all": "npm run check:formatting:all --write",
+    "pre-commit": "lint-staged",
+    "postinstall": "husky",
     "test": "jest"
   },
   "devDependencies": {
@@ -27,7 +29,9 @@
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
     "jest": "^30.2.0",
+    "lint-staged": "^16.2.4",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.5",
     "typescript": "^5.9.3",
