chore(mode): добавлена заглушка для мода

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "verbatimModuleSyntax": true,
+    "types": ["@typescript-to-lua/language-extensions"],
 
     "strict": true,
     /* Дополнительные строгие проверки (не входят в strict) */
