--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-prettier": "^5.5.4",
+    "glob": "^11.0.3",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "lint-staged": "^16.2.4",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.5",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.46.0",
+    "typescript-to-lua": "^1.32.0"
   }
 }
