refactor(mode): мод переведён на @sentient-world/moonloader

--- a/packages/mode/package.json
+++ b/packages/mode/package.json
@@ -5,6 +5,7 @@
     "build": "tstl -p ./tsconfig.build.json"
   },
   "dependencies": {
-    "@sentient-world/htn": "1.0.0"
+    "@sentient-world/htn": "1.0.0",
+    "@sentient-world/moonloader": "1.0.0"
   }
 }
