feat(mod): переведён на новый world

--- a/packages/mode/package.json
+++ b/packages/mode/package.json
@@ -5,8 +5,7 @@
     "build": "tstl -p ./tsconfig.build.json"
   },
   "dependencies": {
-    "@sentient-world/engine": "1.0.0",
     "@sentient-world/engine-gta-sa": "1.0.0",
-    "@sentient-world/htn": "1.0.0"
+    "@sentient-world/world": "1.0.0"
   }
 }
