chore(mod): переименован с mode на mod

--- a/packages/mod/package.json
+++ b/packages/mod/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sentient-world/mode",
+  "name": "@sentient-world/mod",
   "private": true,
   "scripts": {
     "build": "tstl -p ./tsconfig.build.json"
